GNOME Bugzilla – Bug 686697
gtk_clutter_texture_new() can't be used from gir
Last modified: 2012-10-24 09:35:43 UTC
Created attachment 227049 [details] python test script The attached simple Python test script segfaults and a similar gjs script does as well. The newly created texture is destroyed right away and so we try to print a finalized object; Removing the "(transfer full)" annotation from gtk_clutter_texture_new() solves the crash but I'm not sure why as looks fine to me.
I checked with Tomeu and according to him constructor are not supposed to have any annotation so that's probably the right fix.
Created attachment 227126 [details] [review] remove gtk_clutter_texture_new() annotation Constructor should not have any annotation.
Review of attachment 227126 [details] [review]: I think it's more a general case of "initially unowned is not a transfer type"; it's fine by me to remove the transfer annotation - though you probably want to go through the rest of the constructors as well.
Looks like this was the only constructor annotated in clutter-gtk so we should be good there. Thanks for the review, I'll merge my patch.
Attachment 227126 [details] pushed as 91b8cd2 - remove gtk_clutter_texture_new() annotation
I merged to the 1.12 branch as well.
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.