remove gtk_clutter_texture_new() annotation

Constructor should not have any annotation.

https://bugzilla.gnome.org/show_bug.cgi?id=686697